[project]
name = "streamlit-llm-bot"
version = "0.1.0"
description = "Streamlit-LLM-Bot is a conversational AI bot built using Streamlit and a Large Language Model (LLM)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "streamlit>=1.38.0",
    "vertexai>=1.68.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
]
